Add link to Github repository

--- a/app/templates/acerca.html
+++ b/app/templates/acerca.html
@@ -39,8 +39,12 @@
     </p>
 
     <p>
-      El código fuente está disponible públicamente y puede ser consultado, reutilizado o mejorado por quien lo desee.
+      El código fuente está disponible públicamente y puede ser consultado, reutilizado o mejorado por quien lo desee en 
+      <a href="https://github.com/cuauhtemocbe/judicial-candidates-mx" target="_blank" rel="noopener noreferrer" class="text-blue-600 underline">
+        GitHub
+      </a>.
     </p>
+    
   </article>
 
   <div class="text-center mt-6">
