Add new pages: blue ballot and black list

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -26,11 +26,16 @@
         <a href="{{ url_for('main.boleta_verde') }}" class="text-emerald-600 hover:text-blue-600 transition">Boleta Verde</a>
       </li>
       <li>
-        <a href="{{ url_for('main.acerca') }}" class="hover:text-blue-600 transition">Acerca de</a>
+        <a href="{{ url_for('main.boleta_azul') }}" class="text-blue-700 hover:text-blue-600 transition">Boleta azul</a>
+      </li>
+      </li>
+        <a href="{{ url_for('main.lista_negra') }}" class="text-[#0B0C0C] hover:text-blue-600 transition">Lista negra</a>
       </li>
       <li>
         <a href="{{ url_for('main.index') }}#fuentes" class="hover:text-blue-600 transition">Fuentes</a>
       </li>
+      <li>
+        <a href="{{ url_for('main.acerca') }}" class="hover:text-blue-600 transition">Acerca de</a>
     </ul>
   </nav>
 
